Added stupid mode to conf file

--- a/wvdial.conf
+++ b/wvdial.conf
@@ -3,6 +3,7 @@ Init1 = ATZ
 Init2 = ATQ0 V1 E1 S0=0 &C1 &D2 +FCLASS=0
 Modem Type = Analog Modem
 Baud = 720000000
+Stupid Mode = 1
 New PPPD = yes
 Modem = /dev/ttyUSB2
 ISDN = 0
