--- a/wvdial.conf
+++ b/wvdial.conf
@@ -1,6 +1,7 @@
 [Dialer Defaults]
 Init1 = ATZ
 Init2 = ATQ0 V1 E1 S0=0 &C1 &D2 +FCLASS=0
+Init3 = AT+CGDCONT=1,"IP","YOUR.SIMCARD_APN.HERE"
 Modem Type = Analog Modem
 Baud = 720000000
 Stupid Mode = 1
